src/polychem/snapshots/smithereens__polychem__composition_parser__tests__errors-4.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × Should be an element (Au) or and isotope [15N] optionally followed by
  │ a number
  ╰─▶   × Should be uppercase, yo
      
   ╭────
 1 │ xH2O 
   · ┬
   · ╰── expected uppercase
   ╰────
  help: Have you tried...

