src/polychem/snapshots/smithereens__polychem__composition_parser__tests__errors-5.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × Should be an element (Au) or and isotope [15N] optionally followed by
  │ a number
  ╰─▶   × Should be uppercase, yo or expected '[' to open isotope brackets
      
   ╭────
 1 │ -H2O 
   · ┬
   · ╰── expected uppercase or '['
   ╰────
  help: Have you tried...

