src/polychem/snapshots/smithereens__polychem__composition_parser__tests__errors-8.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × Should be an element (Au) or and isotope [15N] optionally followed by
  │ a number
  ╰─▶   × Should be a count (can't start with a zero!)
      
   ╭────
 1 │ C3H06N4 
   ·    ▲
   ·    ╰── expected non-zero
   ╰────
  help: Have you tried...

