src/polychem/snapshots/smithereens__polychem__composition_parser__tests__errors-9.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × Should a ± number and particle
  ╰─▶   × Should be lowercase, yo
      
   ╭────
 1 │ H2O+P 
   ·     ┬
   ·     ╰── expected lowercase
   ╰────
  help: Have you tried being better?

